apps/cyberstorm-remix/app/styles/settingsItem.css
@layer nimbus-layout {
  .settings-items {
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    gap: 4rem;
  }

  .settings-items__item {
    display: flex;
    flex: 1 1 0;
    flex-direction: row;
    gap: 5rem;
  }

  .settings-items__meta {
    display: flex;
    flex-direction: column;
    gap: var(--gap-xs);
    align-items: flex-start;
    align-self: stretch;
    width: 21rem;
  }

  .settings-items__title {
    align-self: stretch;
    color: var(--color-text-primary);
    font-weight: var(--font-weight-bold);

    font-size: var(--font-size-body-lg);
    line-height: var(--line-height-md);
  }

  .settings-items__description {
    align-self: stretch;
    color: var(--color-text-tertiary);
    font-weight: var(--font-weight-regular);

    font-size: var(--font-size-body-md);
    line-height: var(--line-height-md);
  }

  .settings-items__content {
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    gap: var(--gap-md);
    align-items: flex-start;
    align-items: stretch;
  }

  .settings-items__island {
    display: flex;
    flex-direction: column;
    gap: var(--gap-md);
    align-items: flex-start;
    padding: var(--space-16) var(--space-32);
    border-radius: var(--radius-md);
    background: var(--color-surface-default);
  }

  @media (width <= 48rem) {
    .settings-items__item {
      flex-direction: column;
    }

    .settings-items__meta {
      width: 100%;
    }

    .settings-items__content {
      width: 100%;
    }
  }
}

